# laryen-command-model

./: .gitignore  INTEGRATION.md  OTA-DEPLOY.md  PROGRESS.md  README.md  pyproject.toml
artifacts/: backbone_heads_golden.json
config/: ssot.json
dart/: pubspec.yaml
dart/lib/: lcm_classifier.dart  lcm_decoder.dart  lcm_tokenizer.dart
dart/test/: classifier_test.dart  decoder_test.dart  tokenizer_test.dart
data/: custom_samples.jsonl
lcm/: __init__.py  backbone_export.py  backbone_infer.py  backbone_train.py  bench.py  bpe_ref.py  dataset.py  eval.py  export_onnx.py  holdout_eval.py  infer.py  model.py  phonetics.py  schema.py  synth.py  synth_i18n.py  tokenizer.py  train.py
scripts/: deploy_model.sh  export_golden.py  gen_data.py  gen_manifest.py  probe_lang.py  run_all.sh  sync_ssot.py
tests/: holdout.json  test_accuracy.py  test_bpe.py  test_onnx.py  test_schema.py
