[project]
name = "laryen-command-model"
version = "0.1.0"
description = "라리엔 명령어 이해 SML — 발화 텍스트를 VoiceIntent JSON 으로 분류하는 초경량 온디바이스 모델 (ONNX 런타임 탑재)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",          # M5 Apple Silicon MPS 학습
    "tokenizers>=0.20",    # BPE (한/영 코드스위칭)
    "regex>=2024.0",       # bpe_ref 의 GPT-2 pre-tokenize 정규식(parity 검증용)
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxscript>=0.1",     # torch.onnx.export 신규 exporter 백엔드
    "onnxruntime>=1.19",   # export 검증 (라리엔 클라는 sherpa_onnx 의 onnxruntime 공유)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
